--- a/a2hs/index.html
+++ b/a2hs/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>A2HS demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>A2HS </title>
     <link href="style.css" rel="stylesheet">
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <img src="images/fox1.jpg" alt="a fox picture">
-    <h1 style="color:white;">你好！Hello World!</h1>
+    <h1 style="color:white;">你好，世界！Hello World!</h1>
     <button class="add-button">Add to home screen</button>
   </body>
 </html>
