--- a/a2hs/index.html
+++ b/a2hs/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <img src="images/fox1.jpg" alt="a fox picture">
-    <h1 style="color:white;">你好，世界！Hello World!</h1>
+    <h1 style="color:white;">你好，这个世界！Hello World!</h1>
     <button class="add-button">Add to home screen</button>
   </body>
 </html>
